# quant-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
documents/: database-dev.md
documents/log/: two_sql_connector_dev.md
quant_toolkit/: constants.py  data_download.py  performance_metrics.py
quant_toolkit/database/: db_default_config.py  quant_db.py  sql_connector.py
tests/: test_sanity.py  test_sql_connector_local.py  test_sql_connector_remote.py
tests/data_download/: test_data_download.py
tests/database/: test_quant_db.py  test_sql_connector_remote.py
tests/performance_metrics/: test_performance_metrics.py
